# melange

./: .gitignore  .melangerules  Cargo.toml  LICENSE.txt  README.md  melange-config.toml
lint-examples/: rust_enum.rs
src/: lib.rs  main.rs
src/cli/: args.rs
src/config/: llm_config.rs  mod.rs  project_rules.rs
src/engine/: llm_engine.rs  mod.rs
src/errors/: mod.rs
src/parser/: mod.rs  rust_parser.rs  structure.rs
src/rules/: generic.rs
tests/fixtures/: melange-config.toml
