[package]
name = "melange"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
llm = "1.1.0"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
