[package]
name = "melange"
version = "0.1.0"
edition = "2024"
authors = ["Radu Grosu <radu.grosu@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
llm = { version = "1.1.0", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "api"] }
log = "0.4.26"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
quote = "1.0.39"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.100", features = ["full", "visit"] }
tokio = "1.44.0"
toml = "0.8.20"
tracing = "0.1.41"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
